added: scrollbar css

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="bg-transparent">
-    <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-4">
+    <div class="mx-auto w-full px-4 py-8 sm:px-6 lg:px-4">
       <div class="lg:flex lg:items-start lg:gap-4">
         <div class="text-teal-600">
           
@@ -8,9 +8,9 @@
         <div class="mt-8 grid grid-cols-2 gap-8 lg:mt-0 lg:grid-cols-5 lg:gap-y-16">
           <div class="col-span-2">
             <div>
-              <h2 class="text-2xl font-bold text-gray-900">Get the latest news!</h2>
+              <h2 class="text-2xl font-bold ">Get the latest news!</h2>
   
-              <p class="mt-4 text-gray-500">
+              <p class="mt-4 ">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse non cupiditate quae nam
                 molestias.
               </p>
@@ -32,7 +32,7 @@
                 />
   
                 <button
-                  class="mt-1 w-full bg-teal-500 px-6 py-3 text-sm font-bold uppercase tracking-wide text-white transition-none hover:bg-teal-600 sm:mt-0 sm:w-auto sm:shrink-0"
+                  class="mt-1 w-full  px-6 py-3 text-sm font-bold uppercase tracking-wide  transition-none hover:bg-teal-600 sm:mt-0 sm:w-auto sm:shrink-0"
                 >
                   Sign Up
                 </button>
@@ -41,99 +41,99 @@
           </div>
   
           <div class="col-span-2 sm:col-span-1">
-            <p class="font-medium text-gray-900">Services</p>
+            <p class="font-medium ">Services</p>
   
             <ul class="mt-6 space-y-4 text-sm">
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> 1on1 Coaching </a>
+                <a href="#" class=" transition hover:opacity-75"> 1on1 Coaching </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Company Review </a>
+                <a href="#" class=" transition hover:opacity-75"> Company Review </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Accounts Review </a>
+                <a href="#" class=" transition hover:opacity-75"> Accounts Review </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> HR Consulting </a>
+                <a href="#" class=" transition hover:opacity-75"> HR Consulting </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> SEO Optimisation </a>
+                <a href="#" class=" transition hover:opacity-75"> SEO Optimisation </a>
               </li>
             </ul>
           </div>
   
           <div class="col-span-2 sm:col-span-1">
-            <p class="font-medium text-gray-900">Company</p>
+            <p class="font-medium ">Company</p>
   
             <ul class="mt-6 space-y-4 text-sm">
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> About </a>
+                <a href="#" class=" transition hover:opacity-75"> About </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Meet the Team </a>
+                <a href="#" class=" transition hover:opacity-75"> Meet the Team </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Accounts Review </a>
+                <a href="#" class=" transition hover:opacity-75"> Accounts Review </a>
               </li>
             </ul>
           </div>
   
           <div class="col-span-2 sm:col-span-1">
-            <p class="font-medium text-gray-900">Helpful Links</p>
+            <p class="font-medium ">Helpful Links</p>
   
             <ul class="mt-6 space-y-4 text-sm">
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Contact </a>
+                <a href="#" class=" transition hover:opacity-75"> Contact </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> FAQs </a>
+                <a href="#" class=" transition hover:opacity-75"> FAQs </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Live Chat </a>
+                <a href="#" class=" transition hover:opacity-75"> Live Chat </a>
               </li>
             </ul>
           </div>
   
           <div class="col-span-2 sm:col-span-1">
-            <p class="font-medium text-gray-900">Legal</p>
+            <p class="font-medium ">Legal</p>
   
             <ul class="mt-6 space-y-4 text-sm">
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Accessibility </a>
+                <a href="#" class=" transition hover:opacity-75"> Accessibility </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Returns Policy </a>
+                <a href="#" class=" transition hover:opacity-75"> Returns Policy </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Refund Policy </a>
+                <a href="#" class=" transition hover:opacity-75"> Refund Policy </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Hiring Statistics </a>
+                <a href="#" class=" transition hover:opacity-75"> Hiring Statistics </a>
               </li>
             </ul>
           </div>
   
           <div class="col-span-2 sm:col-span-1">
-            <p class="font-medium text-gray-900">Downloads</p>
+            <p class="font-medium ">Downloads</p>
   
             <ul class="mt-6 space-y-4 text-sm">
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> Marketing Calendar </a>
+                <a href="#" class=" transition hover:opacity-75"> Marketing Calendar </a>
               </li>
   
               <li>
-                <a href="#" class="text-gray-700 transition hover:opacity-75"> SEO Infographics </a>
+                <a href="#" class=" transition hover:opacity-75"> SEO Infographics </a>
               </li>
             </ul>
           </div>
@@ -144,7 +144,7 @@
                 href="#"
                 rel="noreferrer"
                 target="_blank"
-                class="text-gray-700 transition hover:opacity-75"
+                class=" transition hover:opacity-75"
               >
                 <span class="sr-only">Facebook</span>
   
@@ -163,7 +163,7 @@
                 href="#"
                 rel="noreferrer"
                 target="_blank"
-                class="text-gray-700 transition hover:opacity-75"
+                class=" transition hover:opacity-75"
               >
                 <span class="sr-only">Instagram</span>
   
@@ -182,7 +182,7 @@
                 href="#"
                 rel="noreferrer"
                 target="_blank"
-                class="text-gray-700 transition hover:opacity-75"
+                class=" transition hover:opacity-75"
               >
                 <span class="sr-only">Twitter</span>
   
@@ -199,7 +199,7 @@
                 href="#"
                 rel="noreferrer"
                 target="_blank"
-                class="text-gray-700 transition hover:opacity-75"
+                class=" transition hover:opacity-75"
               >
                 <span class="sr-only">GitHub</span>
   
@@ -218,7 +218,7 @@
                 href="#"
                 rel="noreferrer"
                 target="_blank"
-                class="text-gray-700 transition hover:opacity-75"
+                class=" transition hover:opacity-75"
               >
                 <span class="sr-only">Dribbble</span>
   
@@ -237,19 +237,19 @@
   
       <div class="mt-8 border-t border-gray-100 pt-8">
         <div class="sm:flex sm:justify-between">
-          <p class="text-xs text-gray-500">&copy; 2022. Company Name. All rights reserved.</p>
+          <p class="text-xs ">&copy; 2022. Company Name. All rights reserved.</p>
   
           <ul class="mt-8 flex flex-wrap justify-start gap-4 text-xs sm:mt-0 lg:justify-end">
             <li>
-              <a href="#" class="text-gray-500 transition hover:opacity-75"> Terms & Conditions </a>
+              <a href="#" class=" transition hover:opacity-75"> Terms & Conditions </a>
             </li>
   
             <li>
-              <a href="#" class="text-gray-500 transition hover:opacity-75"> Privacy Policy </a>
+              <a href="#" class=" transition hover:opacity-75"> Privacy Policy </a>
             </li>
   
             <li>
-              <a href="#" class="text-gray-500 transition hover:opacity-75"> Cookies </a>
+              <a href="#" class=" transition hover:opacity-75"> Cookies </a>
             </li>
           </ul>
         </div>
