--- a/src/styles.css
+++ b/src/styles.css
@@ -6,12 +6,16 @@
 :root{
     --bg-color: white;
     --text-color: black;
+    --theme-color: rgb(0, 0, 255);
 }
 
 .dark-mode {
   --bg-color: black;
   --text-color: white;
+  --theme-color: rgb(0, 0, 255);
 }
+
+
 
 
 
@@ -29,7 +33,24 @@
     color: var(--text-color);
     transition: background-color 0.5s ease-in-out;
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--bg-color); 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--theme-color);
+  border-radius: 10px;
+}
 
+/* Handle on hover */
+/* ::-webkit-scrollbar-thumb:hover {
+  background: var(--text-color); 
+} */
 
 
 html,
@@ -39,6 +60,7 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
 }
+
 
 .main-container {
   display: flex;
