added: ngrx package

--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -5,7 +5,7 @@
           
         </div>
   
-        <div class="mt-8 grid grid-cols-2 gap-8 lg:mt-0 lg:grid-cols-5 lg:gap-y-16">
+        <div class="mt-8 grid grid-cols-2 gap-8 lg:mt-0 lg:grid-cols-5 lg:gap-y-16 justify-center">
           <div class="col-span-2">
             <div>
               <h2 class="text-2xl font-bold ">Get the latest news!</h2>
@@ -17,22 +17,22 @@
             </div>
           </div>
   
-          <div class="col-span-2 lg:col-span-3 lg:flex lg:items-end">
-            <form class="w-full">
+          <div class="col-span-2 lg:col-span-3 lg:flex lg:items-end ">
+            <form class="flex w-full justify-center">
               <label for="UserEmail" class="sr-only"> Email </label>
   
               <div
-                class="border border-theme-100 p-2 focus-within:ring sm:flex sm:items-center sm:gap-4"
+                class="border flex justify-between items-center px-2 border-theme-100 focus-within:ring sm:flex sm:items-center sm:gap-4 rounded-lg"
               >
                 <input
                   type="email"
                   id="UserEmail"
-                  placeholder="john@rhcp.com"
-                  class="w-full border-none outline-none focus:border-transparent focus:ring-transparent sm:text-sm"
+                  placeholder="ero.senpai@otaku.com"
+                  class="min-w-0 md:min-w-[300px] border-none outline-none focus:border-transparent focus:ring-transparent sm:text-sm h-10 text-center rounded-lg"
                 />
   
                 <button
-                  class="mt-1 w-full  px-6 py-3 text-sm font-bold uppercase tracking-wide  transition-none hover:bg-teal-600 sm:mt-0 sm:w-auto sm:shrink-0"
+                  class="py-4 px-2 text-sm font-bold uppercase"
                 >
                   Sign Up
                 </button>
@@ -40,7 +40,7 @@
             </form>
           </div>
   
-          <div class="col-span-2 sm:col-span-1">
+          <div class="col-span-1">
             <p class="font-medium ">Services</p>
   
             <ul class="mt-6 space-y-4 text-sm">
@@ -66,7 +66,7 @@
             </ul>
           </div>
   
-          <div class="col-span-2 sm:col-span-1">
+          <div class="col-span-1">
             <p class="font-medium ">Company</p>
   
             <ul class="mt-6 space-y-4 text-sm">
@@ -84,7 +84,7 @@
             </ul>
           </div>
   
-          <div class="col-span-2 sm:col-span-1">
+          <div class="col-span-1">
             <p class="font-medium ">Helpful Links</p>
   
             <ul class="mt-6 space-y-4 text-sm">
@@ -102,7 +102,7 @@
             </ul>
           </div>
   
-          <div class="col-span-2 sm:col-span-1">
+          <div class="col-span-1">
             <p class="font-medium ">Legal</p>
   
             <ul class="mt-6 space-y-4 text-sm">
@@ -124,7 +124,7 @@
             </ul>
           </div>
   
-          <div class="col-span-2 sm:col-span-1">
+          <div class="col-span-1">
             <p class="font-medium ">Downloads</p>
   
             <ul class="mt-6 space-y-4 text-sm">
@@ -237,7 +237,7 @@
   
       <div class="mt-8 border-t border-gray-100 pt-8">
         <div class="sm:flex sm:justify-between">
-          <p class="text-xs ">&copy; 2022. Company Name. All rights reserved.</p>
+          <p class="text-xs ">&copy; 2023. made with 🩷 by DarkinStar.</p>
   
           <ul class="mt-8 flex flex-wrap justify-start gap-4 text-xs sm:mt-0 lg:justify-end">
             <li>
