--- a/src/app/components/template/navbar/menu/menu.component.html
+++ b/src/app/components/template/navbar/menu/menu.component.html
@@ -7,8 +7,8 @@
               <span>
               {{item.name}}
               </span>
-              <span *ngIf="checkisOpen(item)" class="rotate-180">
-                <svg class="w-4 h-4 inline-block ml-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <span *ngIf="checkisOpen(item)" >
+                <svg class="w-4 h-4 inline-block ml-1 rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
                 </svg>
               </span>
