update ui for navbar

--- a/src/app/components/template/navbar/theme-toggler/theme-toggler.component.html
+++ b/src/app/components/template/navbar/theme-toggler/theme-toggler.component.html
@@ -1,12 +1,12 @@
 <button type="button" class="bg-transparent mr-5 my-3" (click)="toggleTheme()">
   <img
-    *ngIf="isDarkMode"
+    id = "moon"
     src="assets/moon-logo.svg"
     alt="Moon"
     style="background-color: transparent; width: 30px; height: 30px"
   />
   <img
-    *ngIf="!isDarkMode"
+    id = "sun"
     src="assets/sun-logo.svg"
     alt="Sun"
     style="background-color: transparent; width: 30px; height: 30px"
