--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-navbar class="sticky top-0"></app-navbar>
+<app-navbar class="sticky top-0 z-10 bg-white shadow-md"></app-navbar>
 <router-outlet class="main-container"></router-outlet>
 <app-footer></app-footer>
