--- a/src/app/components/template/navbar/navbar.component.html
+++ b/src/app/components/template/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-transparent">
+<nav class="bg-indigo-500">
   <div class="w-full mx-auto px-4">
     <div class="flex justify-between items-center py-4">
       <!-- Logo -->
